adicionado o serviço aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+aws.accessKeyId=AKIAQ3EGRX7TLCH3HZPZ
+aws.secretKey=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
+aws.region=us-east-2
+aws.sns.topic.catalog.arn=arn:aws:sns:us-east-2:058264240102:catalog-emit
